fix features